# libgdxpp

./: .gitignore  Android.mk  CMakeLists.txt  Libgdxpp.project  Libgdxpp.sh  Libgdxpp.workspace  README.md  build.bat  build.sh  buildAndroid.sh  buildDesktop.sh
.codelite/: Libgdxpp.session  compilation.db  refactoring.db
Debug/: Core.ilk
Release/android/app/src/main/assets/: default.frag  default.vert
android/: settings.gradle
android/SDL2/: build.gradle  include  src
android/app/: CMakeLists.txt  SDL2  SDL2_image  build.gradle  proguard-rules.pro
android/app/src/main/: jni
android/app/src/main/cpp/: SDL2  core
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/bullet3/: build.gradle  src
android/dependencies/jni/: Android.mk  Application.mk
android/gradle/wrapper/: gradle-wrapper.properties
android/main/: build.gradle
android/main/src/: ShapeCreator.h
assets/: alt.frag  alt.vert  default.frag  default.vert  texTest.frag  texTest.vert
core/src/: BulletSim.hpp  Camera.h  GL.cpp  GL.h  LibGDXApplication.cpp  LibGDXApplication.h  MyAppListener.cpp  MyAppListener.h  OrthographicCamera.h  PerspectiveCamera.h  Serializable.h  ShaderProgram.cpp  ShaderProgram.h  ShapeCreator.hpp  main.cpp
core/src/graphics/: Mesh.cpp  Mesh.h  VertexAttribute.h
core/src/graphics/glutils/: IndexData.cpp  IndexData.h  ShaderProgram.cpp  ShaderProgram.h  VertexData.cpp  VertexData.h
core/src/math/: Affine2.cpp  Affine2.h  Frustum.cpp  Frustum.h  Interpolation.h  MathUtils.cpp  MathUtils.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  NumberUtils.h  Plane.h  Quaternion.cpp  Quaternion.h  RandomXS128.cpp  RandomXS128.h  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
core/src/math/collision/: BoundingBox.cpp  BoundingBox.h  Ray.cpp  Ray.h
src/: Camera.h  GL.h  InputProcessor.h  LibGDXApplication.cpp  LibGDXApplication.h  PerspectiveCamera.h  RawInputMultiplexer.h  RawInputProcessor.h  Serializable.h  ShapeCreator.hpp
src/graphics/: Color.cpp  Color.h  GLTexture.h  Mesh.cpp  Mesh.h  Texture.h  VertexAttributes.cpp  VertexAttributes.h
src/graphics/g2d/: TextureRegion.h
src/graphics/g3d/: Attribute.h  Shader.h
src/graphics/g3d/model/: MeshPart.cpp  MeshPart.h
src/graphics/g3d/utils/: MeshPartBuilder.h
src/graphics/glutils/: MipMapGenerator.h  ShaderProgram.h  VertexData.cpp  VertexData.h
src/math/: Affine2.h  Frustum.cpp  Interpolation.h  MathUtils.h  Matrix4.cpp  Plane.h  Quaternion.cpp  Quaternion.h  RandomXS128.cpp  RandomXS128.h  Vector.h  Vector3.cpp  Vector3.h
src/math/collision/: Ray.cpp
src/utils/: NumberUtils.h
